--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "3238351902@qq.com"
         }
     ],
-    "minimum-stability": "master",
+    "minimum-stability": "dev",
     "require": {
 		"php": ">=5.4"
 	},
